Revert "Fix navbar-collapse float"

--- a/src/_core.less
+++ b/src/_core.less
@@ -21,7 +21,6 @@
       padding-right: 0;
       padding-left: 0;
       max-height: none;
-      clear: both;
 
       .navbar-nav {
         float: none !important;
